--- a/hello/templates/service.yaml
+++ b/hello/templates/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: service
 metadata:
-  name: {{ "include "hello.fullname" . }}
+  name: {{ include "hello.name" . }}
   labels:
-    {{ include "hello.labels" }}
+    {{ include "hello.labels" . }}
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.type }}
+    - port: {{ .Values.service.port }}
       targetPort: 8080
       protocol: TCP
   selector:
