--- a/hello/templates/deployment.yaml
+++ b/hello/templates/deployment.yaml
@@ -9,27 +9,19 @@ spec:
   selector:
     matchLabels:
       app: {{ include "hello.name" . }}
-    template:
-      metadata:
-        labels:
-          app: {{ include "hello.name" . }}
-        annotations:
-          {{- toYaml .Values.annotations | nindent 8 }}
-        checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+  template:
+    metadata:
+      labels:
+        app: {{ include "hello.name" . }}
       spec:
         containers:
           - name: {{ .Chart.Name }}
-            image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+            image: "{{ .Values.image.repository }}:{{ .Chart.AppVersion }}"
             imagePullPolicy: {{ .Values.image.pullpolicy }}
             ports:
               - containerPort: 8080
-          securityContext:
-            runAsUser: 1000
-            runAsGroup: 1000
-            fsGroup: 2000
-            allowPrivilegeEscalation: false
-            env:
-              {{- range .Values.env }}
-              - name: "{{ .name }}"
-                value: "{{ .value }}"
-              {{- end }}
+            securityContext:
+              runAsUser: 1000
+              runAsGroup: 1000
+              fsGroup: 2000
+              allowPrivilegeEscalation: false
